fixed overflow bug

--- a/style.css
+++ b/style.css
@@ -131,12 +131,14 @@ video#bgvid {
 	height: 100vh;
 	width: 100%;
 	background-color: #FEFEF2;
+	overflow: scroll;
 }
 
 .section-3 {
 	width: 100%;
 	height: 100vh;
 	background-color: #FEFEF2;
+	overflow: scroll;
 }
 
 .section-4 {
@@ -257,7 +259,7 @@ video#bgvid {
 	height: 100%;
 	width: 100%;
 	border: 1px solid transparent;
-	background-color: 
+	overflow: scroll;
 }
 
 .portfolio-images-container {
